# native-bubble-ui

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/jnimenu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  animation.cpp  animation.h  bubble_button.cpp  bubble_button.h  math_utils.cpp  math_utils.h  menu_button.cpp  menu_button.h  menu_layout.cpp  menu_layout.h  native_app.cpp  native_app.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  time_utils.cpp  time_utils.h  ui_element.cpp  ui_element.h
app/src/main/java/com/jnimenu/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jnimenu/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
